A few paragraphs on implicit and explicit information and its uses to explain typing in lambda calculus and small-scale reflection.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -696,13 +696,13 @@ With these improved types our template doesn't change a lot, but the user experi
 
 The new template, thoroughly tested for user experience, will soon turn out to be good enough. But user experience is not the only way of checking whether the template makes sense. In our case, we could have arrived at the same conclusions from a completely different angle, which I will call \textit{evidence-based programming}\footnote{This is a term I coined for the purpose of this thesis.}. It roughly corresponds to the part of our abstract about ``representing flow of information in a proof using types'', just that we will consider the flow of information in a program, not a proof.
 
-Before we see how to use this new concept to improve our original template, we will first have to meet the problem it solves, called \textit{boolean blindness}, a dangerous disease that often afflicts programmers trasitioning from imperative to functional. We will also develop a conceptual framework which allows to understand these two in a deeper sense and link them with many other phenomena, like the \textit{small-scale reflection} proof methodology or \textit{intrinsic and extrinsic typing} in lambda calculus.
+Before we see how to use this new concept to improve our original template, we will first have to meet the problem it solves, called \textit{boolean blindness}, a dangerous disease that often afflicts programmers trasitioning from imperative to functional. We will also develop a conceptual framework which allows to understand these two in a deeper sense and link them with other related things, like the \textit{small-scale reflection} proof methodology or \textit{intrinsic and extrinsic typing} in lambda calculus.
 
-``Boolean blindness''\footnote{The term was coined by Dan Licata in his lecture notes for an introductory functional programming class \cite{BBLicata}.} is an informal term used in the functional programming blogosphere to describe a few interrelated programming misconceptions and antipatterns. Robert Harper used it on his blog \cite{BBHarper} to name the erroneous view, held by some imperative programmers and classical mathematicians, that booleans and propositions are the same thing.\footnote{Note that it is only wrong to think that they are \textit{a priori} the same. If we assume classical logic and the Univalence Axiom, it is indeed the case that \m{bool = Prop}. For details see exercise 3.9 in \cite{HoTTBook}.} However, it is most often applied to quite different phenomena (see \cite{BBFairbank} for a more software-engineering-oriented presentation and \cite{BBHXA} for a perspective going beyond the booleans).
+``Boolean blindness''\footnote{The term was coined by Dan Licata in his lecture notes for an introductory functional programming class \cite{BBLicata}.} is an informal term used in the functional programming blogosphere to describe a few interrelated programming misconceptions and antipatterns. Robert Harper used it on his blog \cite{BBHarper} to name the erroneous view, held by some imperative programmers and classical mathematicians, that booleans and propositions are the same thing.\footnote{Note that it is only wrong to think that they are \textit{a priori} the same. If we assume classical logic and the Univalence Axiom, it is indeed the case that \m{bool = Prop}. For details see exercise 3.9 in \cite{HoTTBook}.} However, it is most often applied in quite different situations (see \cite{BBFairbank} for a more software-engineering-oriented presentation and \cite{BBHXA} for a perspective going beyond the booleans).
 
 One of these is a bad programming practice, in which any concept that can take one of two values is represented using the boolean type. This decreases code readability, because in a call like \m{f\ true} it's not obvious what the \m{true} stands for, and one has to consult documentation or the function's definition to learn that the first argument of \m{f} is named, for example, \m{isAdmin}, which clarifies the meaning of the call \m{f true}.
 
-Another consequence stemming from this practice is lowered code extensibility: when the business logic changes (e.g. users can now have one of three statuses: ``admin'', ``premium'', ``regular''; instead of the previous two: ``admin'' and ``non-admin''), it requires a huge refactoring (which can, if performed badly, lead to the third form of boolean blindness described below) instead of small changes to a custom data type and a few functions that use it.
+Another consequence stemming from this practice is lowered code extensibility: when the business logic changes (e.g. users can now have one of three statuses: ``admin'', ``premium'', ``regular''; instead of the previous two: ``admin'' and ``non-admin''), it requires a huge refactoring (which can, if performed badly, lead to the third kind of boolean blindness described below) instead of small changes to a custom data type and a few functions that use it.
 
 ``Boolean blindness'' is also used to name a horrible antipattern in which boolean tests (i.e. if-then-else) are used instead of pattern matching. An example in Coq would be writing \m{if isSome x then f (unwrapSome x) else y} instead of \m{match x with | Some x' => f x' | None => y end}, where \m{unwrapSome\ :\ forall\ A\ :\ Type, option A -> A}. If Coq accepted such code, we could easily derive a contradiction, because \m{unwrapSome False None} is a proof of \m{False}. Fortunately it is not possible to write such code in Coq, because Coq won't allow us to implement \m{unwrapSome}.
 
@@ -710,19 +710,23 @@ A less ominous example would be writing \m{if isZero n then x else f (pred n)} i
 
 The clou of this last kind of boolean blindness is a lack of explicitly represented evidence, stemming from the use of boolean tests instead of pattern matching, which distorts, or sometimes even blocks, the flow of information in the program.
 
-In the example, in the else branch of \m{if isZero n} we know that \m{n} is not zero, but the evidence for that fact, which is the predecessor of \m{n}, is missing. Because of this the flow of information is blocked, i.e. we can't explicitly pass the predecessor to \m{f}. This forces us to call \m{pred}, which recovers the predecessor and thus restores the flow of information. When seen from this angle, using if-then-else instead of pattern matching is not only inefficient, but also extremely silly.
+In the example, in the else branch we know that \m{n} is not zero, but the evidence for that fact, which is the predecessor of \m{n}, is missing. Because of this the flow of information is blocked, i.e. we can't explicitly pass the predecessor to \m{f}. This forces us to call \m{pred}, which recovers the predecessor and thus restores the flow of information. When seen from this angle, using if-then-else instead of pattern matching is not only inefficient, but also extremely silly.
 
 In Coq the difference between \m{bool} and \m{Prop} is very clear and hard to miss, so the first kind of boolean blindness is unlikely to afflict Coq users. Because not much ordinary software development is carried out in Coq, the second kind is also unlikely. It is therefore the third kind that can most easily sneak into our Coq code and thankfully only in the milder form (the \m{isZero} and \m{pred} example), because Coq shields us from the worst mistakes (the \m{unwrapSome} example).
 
-This is what has indeed happened to our initial template. We declared the return type of \m{short} to be \m{bool} and then branched on it in the definition of \m{qs}. This causes the information on shortness (or lack of it) to not be present in the else branch, so that the only sensible domain for \m{choosePivot} is \m{list A}, which leads to problems with filling the template that we saw in the last subsection.
+This is what has indeed happened to our initial template. We declared the return type of \m{short} to be \m{bool} and then branched on it in the definition of \m{qs}. This causes the information on shortness (or lack of it) to not be present in the else branch, so that the only sensible domain for \m{choosePivot} is \m{list A}, which leads to problems with filling the template that we have already seen.
 
-How do we avoid such mistakes in the future? To do that, we first have to look at the problem from a more general perspective. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The names and the whole perspective are mine. I don't know if it appears anywhere in the literature.}
+How do we avoid such mistakes in the future? To do that, we first have to look at the problem from a more general perspective. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The names and the whole perspective are mine. I don't know if it appears anywhere in the literature.} A piece of information is explicit when we have an element of some type that represents it and implicit otherwise.
+
+If we match on a list \m{l}, for example, then in the \m{nil} branch we explicitly know that \m{l} is empty and the evidence for that is \m{l} itself, which is convertible with \m{nil} in this branch. In the \m{cons} case, we explicitly know that \m{l} is not empty and the evidence for that is again \m{l} itself, this time convertible with \m{h\ ::\ t} where \m{h} is its head and \m{t} its tail. Another example: the lists \m{[1; 2; 3]} and \m{[2; 3; 1]} are obviously permutations of each other, but this information stays implicit. If we also have a proof of \m{Permutation [1; 2; 3] [2; 3; 1]} then this information becomes explicit, with the proof being the evidence.
+
+Boolean blindness (of the third kind) can be summarized by saying that it occurs when there's too much implicit information and too little explicit information. But we can apply this distinction to understand many more phenomena. For example, there are two version of simply typed lambda calculus: extrinsically typed and intrinsically typed \cite{IntrinsicExtrinsic}. In the intrinsic variant all terms are well-typed (so, for example, $\lambda x.xx$ is not a term). In the extrinsic variant terms need only conform to the grammar and types are assigned separately, so $\lambda x.xx$ is a term, but it is not well-typed. It is easy to see that the difference is all about typing information: in the intrinsic variant it is explicit and in the extrinsic variant it is implicit. Other conclusions follow: in the extrinsic variant type inference is a method of reconstructing explicit evidence for the implicit typing information present in terms. But lambda calculus is not the only place where a distinction between intrinsic and extrinsic typing information makes sense -- the same holds for almost any data structure. Consider binary search trees, for example. We can define the underlying type of trees in two ways: in the first case all trees are binary search trees (intrinsic typing, explicit information); in the second case, the trees are just ordinary binary trees and the binary search trees are only those that satisfy an extrinsic specification (extrinsic ``typing'', implicit information).
+
+From this perspective we can also understand \textit{small-scale reflection}\footnote{See \cite{SSR1} for an implementation of a proof language for Coq which is based on this methodology and \cite{SSR2} for its documentation. Also see \cite{MCB}, a book about a library of formalized mathematics done in Coq which uses the small scale reflection methodology.}, a general-purpose proof engineering methodology most famously applied to the first fully formal proof of the four colour theorem \cite{4CT1} \cite{4CT2}. Small-scale reflection is all about changing the form of explicit information. Let's say we have a predicate \m{Even\ :\ nat -> Prop} which represents the property of a natural number being even. It explicitly contains all the information on evenness, but it also takes a lot of memory and computing with it is rather slow. Small-scale reflection is a way of improving this situation by defining a function \m{even\ :\ nat -> bool}, which ``reflects'' the predicate \m{Even}: \m{Even n} holds if and only if \m{even n = true}. Using \m{even} we can compute much faster and the proofs of \m{even n = true} occupy a negligible amount of memory. When we need the explicit information about \m{n} being even, we can recover it using \m{even}'s specification and use \m{Even n} as if we had it from the very beginning. 
 
 
-, and \textit{small-scale reflection}\footnote{See \cite{SSR1} for an implementation of a proof language for Coq which is based on this methodology and \cite{SSR2} for its documentation. Also see \cite{MCB}, a book about a library of formalized mathematics done in Coq which uses the small scale reflection methodology.}, a general-purpose proof engineering methodology most famously applied to the first fully formal proof of the four colour theorem \cite{4CT1} \cite{4CT2}.
 
-
-% New perspective: implicit vs explicit information. Boolean blindness is when our information is too implicit. Extrinsic typing in lamda calc is implicit type information, intrinsic typing is explicit type info. Reflection is replacing some explicit information with implicit information realized by computation. Strong specification types in Coq (like sumbool, sumor) allow enriching thing with more explicit information. The same difference is present in data structures, e.g. we can have BSTs with explicit proofs of BST property, or ordinary trees which will satisfy the BST property implicitly when constructed using an appropriate interface.
+%Reflection is replacing some explicit information with implicit information realized by computation. Strong specification types in Coq (like sumbool, sumor) allow enriching thing with more explicit information.
 
 
 \subsection{Some technical remarks on modularity mechanisms and bundling}
@@ -969,6 +973,12 @@ Mention thesis' repository: \url{wkolowski.github.io/RandomCoqCode/Thesis/}
     \textit{‘Boolean-blindness’ is about types},
     2013, \\
     \url{http://www.hxa.name/notes/note-hxa7241-20131124T0927Z.html}
+
+\bibitem{IntrinsicExtrinsic}
+    John C. Reynolds,
+    \textit{The Meaning of Types: from Intrinsic to Extrinsic Semantics},
+    2000, \\
+    \url{https://www.cs.cmu.edu/afs/cs/user/jcr/ftp/typemeaning.pdf}
     
 \bibitem{4CT1}
     Georges Gonthier,
